[gd_scene load_steps=6 format=3 uid="uid://bkr08nyqjnpg5"]

[ext_resource type="Script" path="res://ui/main_menu/options_menu.gd" id="1_om618"]
[ext_resource type="FontFile" uid="uid://dkg32o3qfh2n7" path="res://assets/Fonts/pixelmix.ttf" id="3_1353u"]
[ext_resource type="PackedScene" uid="uid://ci8invl6x652e" path="res://ui/main_menu/settings_tab_container.tscn" id="3_va5lm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l1xn0"]
bg_color = Color(0.6, 0.6, 0.6, 0.333333)
border_width_bottom = 4
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_42voh"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_bottom = 4
corner_detail = 1

[node name="options_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_om618")

[node name="ContentMarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="MarginContainer" type="MarginContainer" parent="ContentMarginContainer"]
layout_mode = 2
theme_override_constants/margin_top = 64

[node name="VBoxContainer" type="VBoxContainer" parent="ContentMarginContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="Label" type="Label" parent="ContentMarginContainer/MarginContainer/VBoxContainer"]
modulate = Color(1, 1, 1.3, 1)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.219608, 0.4, 0.745098, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 4
theme_override_constants/shadow_outline_size = 16
theme_override_fonts/font = ExtResource("3_1353u")
theme_override_font_sizes/font_size = 64
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="settings_tab_container" parent="ContentMarginContainer/MarginContainer/VBoxContainer" instance=ExtResource("3_va5lm")]
layout_mode = 2
current_tab = 0

[node name="BackButton" type="Button" parent="ContentMarginContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
focus_neighbor_top = NodePath("../settings_tab_container/Video")
theme_override_fonts/font = ExtResource("3_1353u")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_l1xn0")
theme_override_styles/normal = SubResource("StyleBoxFlat_42voh")
text = "Back"
